# Aegis-Log-Final

./: package.json
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src-tauri/: tauri.conf.json
