[package]
name = "aegis-log"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = "1.5"

[dependencies]
tauri = { version = "1.5", features = ["shell-all", "custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
